--- a/view/frontend/web/css/source/storelisting.less
+++ b/view/frontend/web/css/source/storelisting.less
@@ -10,6 +10,8 @@
 @media screen and (min-width: 480px) {
 	.storelist-stores{
 		.store{
+			overflow:hidden;
+			margin-top:10px;
 			text-align:center;
 			clear:both;
 			.gallery{
